[package]
name = "joeblink"
version = "0.1.0"
authors = ["Joe Hirschfeld <joe@ibj.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32l4 = { version = "0.12.1", features = ["stm32l4x5", "rt"] }

[[bin]]
name = "joeblink"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
